--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://www.patacrep.com
 
 Package: songbook-client
 Architecture: any
-Depends: ${shlibs:Depends}, libqt4-sql-sqlite (>= 4.3), texlive-base, texlive-lang-french, texlive-latex-extra, python
+Depends: libqt4-sql-sqlite (>= 4.3), texlive-base, texlive-lang-french, texlive-latex-extra, python
 Recommends: git-core, lilypond
 Description: Client for patacrep songbooks
  The songbook-client is an interface to build
