--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
 #-------------------------------------------------------------------------------
 # ressources
 set(SONGBOOK_CLIENT_RCS
-  songbook.qrc
+  songbook-client.qrc
   )
 #-------------------------------------------------------------------------------
 # process Qt special files
