Revert "rename songbook.qrc to songbook-client.qrc"
This reverts commit 179202fed96769722e16b3199a51fda566b9ac12.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
 #-------------------------------------------------------------------------------
 # ressources
 set(SONGBOOK_CLIENT_RCS
-  songbook-client.qrc
+  songbook.qrc
   )
 #-------------------------------------------------------------------------------
 # process Qt special files
