WIP new songbook format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,8 @@ set(SONGBOOK_CLIENT_SOURCES
   src/preferences.cc
   src/library.cc
   src/songbook.cc
-  src/header.cc
   src/tools.cc
   src/download.cc
-  src/custom.cc
   )
 #-------------------------------------------------------------------------------
 # header (moc)
@@ -34,7 +32,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/library.hh
   src/tools.hh
   src/download.hh
-  src/custom.hh
+  src/songbook.hh
   )
 #-------------------------------------------------------------------------------
 # ressources
