Simplify the filtering application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ set(SONGBOOK_CLIENT_SOURCES
   src/unit-factory.cc
   src/file-property-manager.cc
   src/file-factory.cc
+  src/songSortFilterProxyModel.cc
+  src/filter-lineedit.cc
+  src/utils/lineedit.cc
   )
 #-------------------------------------------------------------------------------
 # header (moc)
@@ -80,6 +83,10 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/unit-factory.hh
   src/file-property-manager.hh
   src/file-factory.hh
+  src/songSortFilterProxyModel.hh
+  src/filter-lineedit.hh
+  src/utils/lineedit.hh
+  src/utils/lineedit_p.hh
   )
 #-------------------------------------------------------------------------------
 # ressources
