Copy translation inside bunddle and modify code for mac os to load them
    For mac os, translation file are not in /usr/share or /usr/local location
    are relative to application location on hard drive, so I add #defin
    __APPLE__ in the code and setQDir to correct location.  I also have to move
    appcreation to the beggning of the main. Note the /usr/share/ is in hard
    into the code and should be set in a variable in the makefile for other
    distribution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,8 +205,9 @@ IF( APPLE )
       )
     ADD_CUSTOM_COMMAND( TARGET ${PROGNAME} POST_BUILD
       COMMAND mkdir ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
+      COMMAND mkdir ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources/lang
       COMMAND cp ARGS ${MACOSX_BUNDLE_ICON_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources
-      #COMMAND cp ARGS *.qm ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources 
+      COMMAND cp ARGS ../lang/*.qm ${CMAKE_CURRENT_BINARY_DIR}/${PROGNAME}.app/Contents/Resources/lang
       )
 
 ELSE( APPLE )
