create tango theme as fallback
    note: this is a squash of several commits to avoid huge amount of data due
    to the first integration of the all "tango" theme instead of only ~10 icons

    a few change, mainly added files ad selection of theme at the beginnig by
    checking if the current theme as document open there is still some
    "jumping" on os-x when tab bar change, but we can live with it note that
    tabs can be move which introduce a bug that 'Library is assumes to be tab
    0'

    extract interseting icon from tango theme and add them in icons/tango
    subdirectory with the same structure as in full tango theme.  made a
    tango.qrc with

    [icons/tango] $rcc -project

    and just fixing the <<prefix='icon/tango'>> by hand
    add a few lines in main.cc to use this theme as a fallback if open-document is not in the current theme

    add tango.qrc in CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
 # ressources
 set(SONGBOOK_CLIENT_RCS
   songbook.qrc
+  icons/tango/tango.qrc
   )
 #-------------------------------------------------------------------------------
 # process Qt special files
