--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/code-editor.cc
   src/tab-widget.cc
   src/library-download.cc
+  src/library-completion-model.cc
   )
 #-------------------------------------------------------------------------------
 # header (moc)
@@ -108,6 +109,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/code-editor.hh
   src/tab-widget.hh
   src/library-download.hh
+  src/library-completion-model.hh
   )
 #-------------------------------------------------------------------------------
 # ressources
