--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Homepage: http://www.patacrep.com
 
 Package: songbook-client
 Architecture: any
-Depends: libqt4-sql-sqlite (>= 4.3), texlive-base, texlive-lang-french, texlive-latex-extra, texlive-fonts-recommended, python, libqtscript4-core, libqtgui4
-Recommends: git-core, lilypond, texlive-xetex 
+Depends: libqt4-sql-sqlite (>= 4.3), libqtscript4-core, libqtgui4
+Recommends: lilypond, python, texlive-base, texlive-latex-extra, texlive-lang-french, texlive-fonts-recommended
 Description: Client for patacrep songbooks
  The songbook-client is an interface to build
  customized PDF songbooks with lyrics, guitar 
