Add a new song panel to replace the existing "song info" module.
This new panel displays a unique item from a song library related
model. It breaks the behavior of the song info module since the last
item clicked is shown instead of the last selected item. This should
creates some disprecancy in the usage of the edit and delete buttons.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ set(SONGBOOK_CLIENT_SOURCES
   src/code-editor.cc
   src/tab-widget.cc
   src/library-download.cc
+  src/song-panel.cc
   )
 #-------------------------------------------------------------------------------
 # header (moc)
@@ -102,6 +103,7 @@ set(SONGBOOK_CLIENT_QT_HEADER
   src/code-editor.hh
   src/tab-widget.hh
   src/library-download.hh
+  src/song-panel.hh
   )
 #-------------------------------------------------------------------------------
 # ressources
