windows: remove libarchive warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,6 +229,7 @@ add_executable(${PROGNAME}
 )
 ENDIF( APPLE )
 target_link_libraries(${PROGNAME} ${QT_LIBRARIES})
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-enable-auto-import")
 target_link_libraries(${PROGNAME} ${LibArchive_LIBRARIES})
 #-------------------------------------------------------------------------------
 # install instructions
